--- a/about.html
+++ b/about.html
@@ -40,6 +40,11 @@
                     </div>
                     <div class="text-wrapper">
                         <p>This summer, I interned at Exemplis LLC in Orange County, CA as a Manufacturing Engineering Intern.</p>
+			    <ul>
+                            <li>Used SolidWorks to design 6'x10' cart with Dead Man's Brakes to transport 4,500 lbs. of raw material with increased safety.</li>
+                            <li>Collaborated with senior managers and machinists to fabricate and manufacture transport cart.</li>
+                            <li>Designed a prototype fabric press to improve efficiency and partially automate the manufacture process for a consumer product.</li>
+                        </ul>
                    </div>
                 </div>
             </div>
@@ -57,7 +62,7 @@
                     <div class="text-wrapper">
                         <ul>
                             <li>I taught myself HTML, CSS, and JavaScript this summer using YouTube and online coding tutorials and wanted to showcase my new skills and past experience in this website, which I coded from scratch!</l1>
-                            <li>As I learn more HTML, CSS, and JS, I will continue to update this website!</li>
+                            <li>As I learn more HTML, CSS, and JS, I will continue to update this website.</li>
                         </ul>
                     </div>
                 </div>
